argocd/applications/actualbudget/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: actualbudget
  labels:
    app: actualbudget

spec:
  replicas: 1
  selector:
    matchLabels:
      app: actualbudget
  template:
    metadata:
      labels:
        app: actualbudget
    spec:
      containers:
        - name: actualbudget
          image: "docker.io/actualbudget/actual-server:24.8.0"
          ports:
            - name: web
              containerPort: 5006
