argocd/applications/actualbudget/rsync.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "actualbudget"
    service: "actualbudget-rsync"
  name: "actualbudget-rsync"
  namespace: "actualbudget"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "actualbudget"
      service: "actualbudget-rsync"

  template:
    metadata:
      labels:
        app: "actualbudget"
        service: "actualbudget-rsync"
      name: "actualbudget-rsync"
      namespace: "actualbudget"
    spec:
      containers:
        - name: "rsync"
          # version 0.2
          image: "ogivuk/rsync@sha256:ba8282ca451b397eb6a7ca7ecbf3135876737d27bd6bdbd85f17d7047a6d2578"
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              cpu: "1m"
              memory: "3Mi"

          volumeMounts:
            - name: "backup"
              mountPath: "/data/destination"

            - name: "crontab"
              mountPath: "/rsync/crontab"
              subPath: "crontab"

            - name: "data"
              mountPath: "/data/source"
              readOnly: true

            - name: "rsync"
              mountPath: "/rsync"

      imagePullSecrets:
        - name: "dockerhub-tlake-read-only"

      volumes:
        - name: "crontab"
          configMap:
            name: "actualbudget-rsync-crontab"

        - name: "data"
          persistentVolumeClaim:
            claimName: "data"

        - name: "backup"
          persistentVolumeClaim:
            claimName: "backup"

        - name: "rsync"
          persistentVolumeClaim:
            claimName: "rsync"
