argocd/applications/actualbudget/routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: actualbudget

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls.certresolver: staging
  name: actualbudget-ingress
spec:
  rules:
    - host: actualbudget.tlake.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: actualbudget
              port:
                name: web
